# learn

./: .gitignore  .gitmodules  README.md  Think and Grow Rich.md  blockchain_game_plan.md  index.html  sentiment_analysis.py  style.css  todo
android/: uniapp打包android应用.md
docker/: CONNECTION_GUIDE.md  QUICK_START.md  README.md  SUMMARY.md  data-analysis.yml  docker-compose.yml  start.sh  test.sh  web-dev.yml
english/: 1.md
go/: merged_interview_questions.md  合并后的面试题.md  面试题-chatgtp.md  面试题集合.md
interview/: interview-expirt
k8s-learn/: README.md  docker-compose.md  iotree-deploy.yaml  iotree.yaml  k8s-contaier设置代理.md  k8s-containerd-常用使用命令.md  k8s-helm-安装nginx-ingress.md  k8s-helm.md  k8s-kubesphere卸载.md  k8s-labels 标签操作.md  k8s-nerdctl 命令集.md  k8s-nfs-client-provisioner-storgeclass.md  k8s-pod.md  k8s-prometheus.md  k8s-使用 Service 暴露你的应用.md  k8s-使用 kubectl 进行故障排除.md  k8s-创建的服务如何通过内部模式访问.md  k8s-删除无法删除的.md  k8s-如何进入pod里面进行操作.md  k8s-安装docker环境.md  k8s-安装gpu.md  k8s-安装nfs服务.md  k8s-安装打包好的helm.md  k8s-安装英伟达gpu -DCGM监控.md  k8s-将docker-compose转换成kubs资源kompose.md  k8s-常用命令.md  k8s-控制器.md  k8s-教程.md  k8s-用kubekey安装.md  k8s-自定义helm-chart包.md  k8s自动补全工具.md  (+6 more)
rust/project/axum-ws-learn/ws-server/: Cargo.toml
rust/project/axum-ws-learn/ws-server/src/: lib.rs  main.rs
rust/project/tonic-test/: Cargo.toml  README.md  build.rs
rust/project/tonic-test/proto/: helloworld.proto
rust/project/tonic-test/src/: client.rs  server.rs
rust/project/tonic-test/src/pb/: helloworld.rs
rust/solana/create-core-asset-example/programs/create-core-asset-example/: Cargo.toml
rust/solana/create-core-asset-example/programs/create-core-asset-example/src/: lib.rs
(+969 files in other folders)
