[package]
name = "tonic-test"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.13"
#prost-types = "0.13"
[build-dependencies]
tonic-build ="0.13"
#tonic-build = {version = "0.13", features = ["prost"]}
