[package]
name = "ws-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
futures = "0.3.31"
#log = "0.4.27"

ws-shared = { path = "../ws-shared" }

[dev-dependencies]
anyhow = "1.0.71"
fake-socket = "0.2"
