[package]
name = "create-core-asset-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "create_core_asset_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = []


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
mpl-core = { version = "0.9.0", features = ["anchor"] }